--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -53,6 +53,7 @@ updates:
         update-types:
           - version-update:semver-major
           - version-update:semver-minor
+          -version-updates:semver-minor-minor
   - package-ecosystem: maven
     directory: /
     schedule:
